--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -36,10 +36,9 @@
                     <li class="nav-item active"><a class="nav-link" asp-page="/Index">Home</a></li>
                     <li class="nav-item active"><a class="nav-link" asp-page="/About">About</a></li>
                     <li class="nav-item active"><a class="nav-link" asp-page="/Contact">Contact</a></li>
-                    <li class="nav-item active"><a class="nav-link" asp-page="/BoardMembers">Board of Directors</a></li>
-                    <li class="nav-item active"><a class="nav-link" asp-page="/Events/Index">Create Event</a></li>
+                    <li class="nav-item active"><a class="nav-link" asp-page="/BoardMembers">Board of Directors</a></li>            
                     <li class="nav-item active"><a class="nav-link" asp-page="/Event">Events</a></li>
-                    <li class="nav-item active"><a class="nav-link" asp-page="/Grants">Create Grants</a></li>
+                    <li class="nav-item active"><a class="nav-link" asp-page="/Grants">Grants</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
