--- a/Pages/Boardmembers/Index.cshtml
+++ b/Pages/Boardmembers/Index.cshtml
@@ -1,20 +1,18 @@
 ﻿@page
 @model webApi.Pages.Boardmembers.IndexModel
 
+
 @{
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Board of Director Members</h2>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.BoardMember[0].UserId)
+                @Html.DisplayNameFor(model => model.UserList[0].UserName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.BoardMember[0].BoardRole)
@@ -26,10 +24,15 @@
         </tr>
     </thead>
     <tbody>
+ @{
+        var i = 0;
+}
 @foreach (var item in Model.BoardMember) {
+   
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.UserId)
+                <!--@Html.DisplayFor(modelItem => item.UserId)-->
+              @Html.DisplayFor(modelItem => Model.UserList[i].UserName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.BoardRole)
@@ -37,12 +40,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Image)
             </td>
-            <td>
+           <!-- <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+            </td> -->
         </tr>
+        i++;
 }
+
     </tbody>
 </table>
