--- a/wwwroot/css/navBar.css
+++ b/wwwroot/css/navBar.css
@@ -1,4 +1,10 @@
-﻿img {
+﻿
+body {
+    padding-top: 0;
+    margin-top: 0;
+}
+
+img {
     max-width: 100%;
     max-height: 100%;
 }
@@ -35,28 +41,5 @@
     border: solid 0.4px #5F9EA0;
 }
 
-.sticky + .content {
-    padding-top: 102px;
-}
 
-.top-container {
-    background-color: #f1f1f1;
-    padding: 30px;
-    text-align: center;
-}
 
-.header {
-    padding: 10px 16px;
-    background: #555;
-    color: #f1f1f1;
-}
-
-.content {
-    padding: 16px;
-}
-
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
