--- a/Areas/Identity/Pages/Account/Admin/Events/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Create.cshtml
@@ -65,7 +65,7 @@
                                     <input type="file" name="files" multiple />
                                 </div>
                                 <div class="form-group">
-                                    <input type="submit" value="Create" class="btn btn-default" />
+                                    <input type="submit" value="Create" class="btn btn-primary" />
                                 </div>
                             </form>
                         </div>
@@ -75,7 +75,7 @@
 
 
                 <div>
-                    <a asp-page="Index">Back to List</a>
+                    <a class="btn btn-secondary" asp-page="Index">Back to List</a>
                 </div>
             </div>
         </div>
