--- a/Areas/Identity/Pages/Account/Admin/Events/Details.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Details.cshtml
@@ -47,7 +47,7 @@
                 </div>
 
                 <div>
-                    <a asp-page="./Index">Back to List</a>
+                    <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
                 </div>
             </div>
         </div>
