--- a/Areas/Identity/Pages/Account/Admin/Grants/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Grants/Create.cshtml
@@ -50,7 +50,7 @@
                                     <input type="file" name="files" multiple />
                                 </div>
                                 <div class="form-group">
-                                    <input type="submit" value="Create" class="btn btn-default" />
+                                    <input type="submit" value="Create" class="btn btn-primary" />
                                 </div>
                             </form>
                         </div>
@@ -60,7 +60,7 @@
 
 
                 <div>
-                    <a asp-page="Index">Back to List</a>
+                    <a class="btn btn-secondary" asp-page="Index">Back to List</a>
                 </div>
             </div>
         </div>
