--- a/Areas/Identity/Pages/Account/Admin/Grants/Delete.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Grants/Delete.cshtml
@@ -43,8 +43,8 @@
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                             <form method="post">
                                 <input type="hidden" asp-for="Grant.Id" />
-                                <input type="submit" value="Delete" class="btn btn-default" /> |
-                                <a asp-page="./Index">Back to List</a>
+                                <input type="submit" value="Delete" class="btn btn-primary" /> |
+                                <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
                             </form>
                         </div>
                     </div>
