--- a/Areas/Identity/Pages/Account/Admin/Grants/Details.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Grants/Details.cshtml
@@ -41,13 +41,12 @@
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                             <a asp-page="./Edit" asp-route-id="@Model.Grant.Id">Edit</a> |
-                            <a asp-page="./Index">Back to List</a>
                         </div>
                     </div>
                 </div>
 
                 <div>
-                    <a asp-page="./Index">Back to List</a>
+                    <a class="btn btn-secondary"asp-page="./Index">Back to List</a>
                 </div>
             </div>
         </div>
