--- a/Areas/Identity/Pages/Account/Admin/Grants/Edit.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Grants/Edit.cshtml
@@ -59,9 +59,9 @@
                                     <input type="file" name="files" value="Grant.Image" multiple />
                                 </div>
                                 <div class="form-group">
-                                    <input type="submit" value="Save" class="btn btn-default" />
+                                    <input type="submit" value="Save" class="btn btn-primary" />
                                 </div>
-                                <a asp-page="./Index">Back to List</a>
+                                <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
                             </form>
                         </div>
                     </div>
