--- a/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -3,33 +3,51 @@
 @{
     ViewData["Title"] = "Change password";
 }
+<div class="container" id="containerLayout">
 
-<h4>@ViewData["Title"]</h4>
-@Html.Partial("_StatusMessage", Model.StatusMessage)
-<div class="row">
-    <div class="col-md-6">
-        <form id="change-password-form" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.OldPassword"></label>
-                <input asp-for="Input.OldPassword" class="form-control" />
-                <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
+    <h2>Members home area</h2>
+    <div>
+        <hr />
+        <div class="row">
+            <div class="col-md-3">
+                <div class="list-group">
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Manage">Profile</a>
+                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Manage/ChangePassword">Password</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Manage/DeletePersonalData">Delete your accont</a>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.NewPassword"></label>
-                <input asp-for="Input.NewPassword" class="form-control" />
-                <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
+            <div class="col-md-9">
+                <div class="cont">
+                    <div>
+                        <h2>Manage your account</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <form id="change-password-form" method="post">
+                            <div asp-validation-summary="All" class="text-danger"></div>
+                            <div class="form-group">
+                                <label asp-for="Input.OldPassword"></label>
+                                <input asp-for="Input.OldPassword" class="form-control" />
+                                <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Input.NewPassword"></label>
+                                <input asp-for="Input.NewPassword" class="form-control" />
+                                <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Input.ConfirmPassword"></label>
+                                <input asp-for="Input.ConfirmPassword" class="form-control" />
+                                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Update password</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-default">Update password</button>
-        </form>
+        </div>
     </div>
 </div>
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+              
