--- a/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -5,30 +5,47 @@
     ViewData["ActivePage"] = ManageNavPages.DeletePersonalData;
 }
 
-<h4>@ViewData["Title"]</h4>
+<div class="container" id="containerLayout">
 
-<div class="alert alert-warning" role="alert">
-    <p>
-        <span class="glyphicon glyphicon-warning-sign"></span>
-        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
-    </p>
-</div>
+    <h2>Members home area</h2>
+    <div>
+        <hr />
+        <div class="row">
+            <div class="col-md-3">
+                <div class="list-group">
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Manage">Profile</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Manage/ChangePassword">Password</a>
+                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Manage/DeletePersonalData">Delete your accont</a>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="cont">
+                    <div>
+                        <h2>Manage your account</h2>
+                    </div>
+                </div>
+                <div class="alert alert-warning" role="alert">
+                    <p>
+                        <span class="glyphicon glyphicon-warning-sign"></span>
+                        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+                    </p>
+                </div>
 
-<div>
-    <form id="delete-user" method="post" class="form-group">
-        <div asp-validation-summary="All" class="text-danger"></div>
-        @if (Model.RequirePassword)
-        {
-        <div class="form-group">
-            <label asp-for="Input.Password"></label>
-            <input asp-for="Input.Password" class="form-control" />
-            <span asp-validation-for="Input.Password" class="text-danger"></span>
+                <div>
+                    <form id="delete-user" method="post" class="form-group">
+                        <div asp-validation-summary="All" class="text-danger"></div>
+                        @if (Model.RequirePassword)
+                        {
+                            <div class="form-group">
+                                <label asp-for="Input.Password"></label>
+                                <input asp-for="Input.Password" class="form-control"  required/>
+                                <span asp-validation-for="Input.Password" class="text-danger"></span>
+                            </div>
+                        }
+                        <button class="btn btn-danger" type="submit">Delete data and close my account</button>
+                    </form>
+                </div>
+            </div>
         </div>
-        }
-        <button class="btn btn-danger" type="submit">Delete data and close my account</button>
-    </form>
+    </div>
 </div>
-
-@section Scripts {
-<partial name="_ValidationScriptsPartial" />
-}
