--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -344,7 +344,7 @@
             <div class="form-group">
                     <input type="file" name="files" multiple />
                 </div>
-            <button type="submit" class="btn btn-default">Register</button>
+            <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
 </div>
