--- a/Areas/Identity/Pages/Account/Admin/admin_edit_pdf.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/admin_edit_pdf.cshtml
@@ -24,6 +24,18 @@
             <div class="col-md-9">
 
                 <h2>Edit pdf files</h2>
+                <p>This is the upload for the <b>EABA by-laws</b>, once uploaded this will replace the previous file. <br> <b>This process is irreversible</b></p>
+                 <form method="post" asp-controller="UploadByLaws" enctype="multipart/form-data">
+                 <div class="form-group">
+                    <input type="file" name="files-law" multiple />
+                </div>
+
+                 <p>This is the upload for the <b>Organization Information</b>, once uploaded this will replace the previous file. <br> <b>This process is irreversible</b></p>
+                 <div class="form-group">
+                    <input type="file" name="files-info" multiple />
+                </div>
+            <button type="submit" class="btn btn-default">Upload Files</button>
+                </form>
                 
             </div>
         </div>
