--- a/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -43,6 +43,7 @@
                             </div>
                             <button type="submit" class="btn btn-primary">Update password</button>
                         </form>
+                        <p>@Model.StatusMessage</p>
                     </div>
                 </div>
             </div>
